tests/isa/x86/expression_fixups/negative/symbolic_memory_displacement_overflow.asm
origin(0x80000000)
x86.use64()

entry:
    mov eax, [rax + target]
target:
    ret
